--- a/selinon/prispevek.tex
+++ b/selinon/prispevek.tex
@@ -30,7 +30,7 @@
 
 \begin{document}
 %
-\title{Selinon - Dynamic Distributed Task Flows}
+\title{Selinon\,--\,Dynamic Distributed Task Flows}
 %
 %
 \author{Fridol\'in Pokorn\'y}
@@ -50,7 +50,7 @@ In the upcoming sections there will be discussed core concepts of distributed ta
 
 \section{Distributed Task Queues} \label{section_distributed_task_queues}
 
-The idea of distributed systems is definitely not novel. There exist multiple implementations of distributed task queues - in the Python ecosystem, there can be found namely project Celery~\cite{ref_celery}, Spotify Luigi~\cite{ref_luigi}, Apache Airflow~\cite{ref_airflow} and others. Most of these solutions require a broker and workers. A broker (also known as message broker or message queue) handles queueing messages which carry information what should be computed. Subsequently, there are connected workers to the broker which consume messages and process them. If a message is processed, it is removed from message broker and the worker that processed the given message is available to process other messages queued on broker. Most often, there is also available a database or storage to which computed results are stored to. The described architecture can be seen on figure~\ref{architecture}.
+The idea of distributed systems is definitely not novel. There exist multiple implementations of distributed task queues\,--\,in the Python ecosystem, there can be found namely project Celery~\cite{ref_celery}, Spotify Luigi~\cite{ref_luigi}, Apache Airflow~\cite{ref_airflow} and others. Most of these solutions require a broker and workers. A broker (also known as message broker or message queue) handles queueing messages which carry information what should be computed. Subsequently, there are connected workers to the broker which consume messages and process them. If a message is processed, it is removed from message broker and the worker that processed the given message is available to process other messages queued on broker. Most often, there is also available a database or storage to which computed results are stored to. The described architecture can be seen on figure~\ref{architecture}.
 
 \begin{figure}
   \centering
@@ -63,7 +63,7 @@ In many scenarios, having a single task for a request described by a message and
 
 \section{Using Celery for Distributed Task Queue}
 
-All of the objectives mentioned in the previous section~\ref{section_distributed_task_queues} can be accomplished with stated open source solutions from Python ecosystem. In fact, we used Celery to accomplish desired behaviour. Celery offers "Celery primitives" that allow to model task flows - dependencies between tasks that can be eigher data dependencies (waiting for results of a task in order to start other tasks) or time dependencies (waiting on external events to proceed to next tasks). Celery primitives allow grouping tasks so tasks are executed in parallel or sequentially possibly on different workers in parallel.
+All of the objectives mentioned in the previous section~\ref{section_distributed_task_queues} can be accomplished with stated open source solutions from Python ecosystem. In fact, we used Celery to accomplish desired behaviour. Celery offers "Celery primitives" that allow to model task flows\,--\,dependencies between tasks that can be eigher data dependencies (waiting for results of a task in order to start other tasks) or time dependencies (waiting on external events to proceed to next tasks). Celery primitives allow grouping tasks so tasks are executed in parallel or sequentially possibly on different workers in parallel.
 
 An example of task flow modeling using Celery primitives can be seen on figure~\ref{celery_phases} (the example is intentionally simplified, see Celery documentation~\cite{ref_celery_docs} for more in depth Celery primitives explanation). With Celery primitives we can create "phases" which group tasks that can be executed in parallel as there are no inter-task dependencies inside phases. Phases need to be executed one after another sequentially due to time or data dependencies of tasks that create these phases.
 
@@ -107,9 +107,9 @@ A Selinon task is abstracted into a Python class respecting Selinon task interfa
   \label{conf_flow}
 \end{figure}
 
-In the example shown in figure~\ref{conf_flow}, Selinon starts \texttt{Task0} and \texttt{Task1}. Once \texttt{Task1} finishes, there are started tasks \texttt{Task2} and \texttt{Task3} that can run in parallel without possibly waiting for \texttt{Task0} to finish or fail. The \texttt{condition} section restricts \texttt{Task2} and \texttt{Task3} execution only for production systems (environment variable \texttt{PRODUCTION} is present). The conditional execution of tasks make the whole system dynamic - these conditions are evaluated each time an edge is fired and they can perform various actions such as checking external events or inspecting results of previous tasks. Their main purpose is to abstract away conditional task execution from actual task implementation logic as well as an optimization to prevent from queueing overhead needed to schedule unwanted tasks.
+In the example shown in figure~\ref{conf_flow}, Selinon starts \texttt{Task0} and \texttt{Task1}. Once \texttt{Task1} finishes, there are started tasks \texttt{Task2} and \texttt{Task3} that can run in parallel without possibly waiting for \texttt{Task0} to finish or fail. The \texttt{condition} section restricts \texttt{Task2} and \texttt{Task3} execution only for production systems (environment variable \texttt{PRODUCTION} is present). The conditional execution of tasks make the whole system dynamic\,--\,these conditions are evaluated each time an edge is fired and they can perform various actions such as checking external events or inspecting results of previous tasks. Their main purpose is to abstract away conditional task execution from actual task implementation logic as well as an optimization to prevent from queueing overhead needed to schedule unwanted tasks.
 
-Besides scheduling tasks directly, Selinon is capable of creating nested flows - scheduling flows from within a flow. Moreover, the scheduling algorithm that Selinon offers removed a restriction on directed acyclic graph (DAG) in flow design which other open source alternatives have.
+Besides scheduling tasks directly, Selinon is capable of creating nested flows\,--\,scheduling flows from within a flow. Moreover, the scheduling algorithm that Selinon offers removed a restriction on directed acyclic graph (DAG) in flow design which other open source alternatives have.
 
 \subsection{Storage and Database Adapters} \label{subsection_storage}
 
